--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -123,13 +123,21 @@ body {
   display: none !important;
 }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 1rem;
-  color: white;
+*::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: rgba(128, 128, 128, 0.123);
 }
-::-webkit-scrollbar-track {
+*::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
   background: transparent;
 }
-::-webkit-scrollbar {
-  width: 8px;
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.524);
+  size: 20px;
+  min-height: 20px;
+  background-color: white;
 }
